crates/voom-dsl/tests/snapshots/parser_snapshots__complex_filter_and_or.snap
---
source: crates/voom-dsl/tests/parser_snapshots.rs
expression: ast
---
name: filters
extends: ~
metadata: ~
config: ~
phases:
  - name: norm
    extend: false
    skip_when: ~
    depends_on: []
    run_if: ~
    on_error: ~
    operations:
      - node:
          Keep:
            target: audio
            filter:
              And:
                - LangIn:
                    - eng
                - Or:
                    - CodecIn:
                        - aac
                    - CodecIn:
                        - flac
        span:
          start: 52
          end: 131
          line: 3
          col: 13
    span:
      start: 27
      end: 132
      line: 2
      col: 9
span:
  start: 0
  end: 138
  line: 1
  col: 1
