crates/voom-dsl/tests/snapshots/parser_snapshots__snapshot_actions_block.snap
---
source: crates/voom-dsl/tests/parser_snapshots.rs
expression: ast
---
name: actions
config: ~
phases:
  - name: normalize
    skip_when: ~
    depends_on: []
    run_if: ~
    on_error: ~
    operations:
      - node:
          Actions:
            target: audio
            settings:
              - - clear_all_default
                - Bool: true
              - - clear_all_forced
                - Bool: true
              - - clear_all_titles
                - Bool: true
        span:
          start: 57
          end: 204
          line: 3
          col: 13
      - node:
          Actions:
            target: subtitle
            settings:
              - - clear_all_default
                - Bool: true
              - - clear_all_forced
                - Bool: true
        span:
          start: 217
          end: 328
          line: 8
          col: 13
    span:
      start: 27
      end: 338
      line: 2
      col: 9
span:
  start: 0
  end: 344
  line: 1
  col: 1
