crates/voom-dsl/tests/snapshots/parser_snapshots__snapshot_config_block.snap
---
source: crates/voom-dsl/tests/parser_snapshots.rs
expression: ast
---
name: with-config
extends: ~
metadata: ~
config:
  audio_languages:
    - eng
    - und
  subtitle_languages:
    - eng
    - jpn
  on_error: continue
  commentary_patterns:
    - commentary
    - director
  keep_backups: ~
  span:
    start: 31
    end: 223
    line: 2
    col: 9
phases:
  - name: init
    extend: false
    skip_when: ~
    depends_on: []
    run_if: ~
    on_error: ~
    operations:
      - node:
          Container: mkv
        span:
          start: 257
          end: 270
          line: 9
          col: 13
    span:
      start: 232
      end: 280
      line: 8
      col: 9
span:
  start: 0
  end: 286
  line: 1
  col: 1
