crates/voom-dsl/tests/snapshots/parser_snapshots__snapshot_container_metadata.snap
---
source: crates/voom-dsl/tests/parser_snapshots.rs
expression: ast
---
name: clean-convert
extends: ~
metadata: ~
config: ~
phases:
  - name: clean
    extend: false
    skip_when: ~
    depends_on: []
    run_if: ~
    on_error: ~
    operations:
      - node: ClearTags
        span:
          start: 45
          end: 55
          line: 3
          col: 5
      - node:
          Container: mkv
        span:
          start: 60
          end: 73
          line: 4
          col: 5
      - node:
          SetTag:
            tag: title
            value:
              Value:
                String: My Movie
        span:
          start: 78
          end: 104
          line: 5
          col: 5
      - node:
          DeleteTag: encoder
        span:
          start: 109
          end: 129
          line: 6
          col: 5
    span:
      start: 27
      end: 133
      line: 2
      col: 3
  - name: metadata
    extend: false
    skip_when: ~
    depends_on:
      - clean
    run_if: ~
    on_error: ~
    operations:
      - node:
          SetTag:
            tag: source
            value:
              Value:
                String: voom
        span:
          start: 182
          end: 205
          line: 11
          col: 5
      - node:
          When:
            condition:
              Exists:
                target: audio
                filter:
                  LangIn:
                    - jpn
            then_actions:
              - SetTag:
                  - language
                  - Value:
                      String: Japanese
            else_actions: []
            span:
              start: 210
              end: 293
              line: 12
              col: 5
        span:
          start: 210
          end: 293
          line: 12
          col: 5
    span:
      start: 137
      end: 294
      line: 9
      col: 3
span:
  start: 0
  end: 297
  line: 1
  col: 1
