crates/voom-dsl/tests/snapshots/parser_snapshots__snapshot_depends_on_and_run_if.snap
---
source: crates/voom-dsl/tests/parser_snapshots.rs
expression: ast
---
name: deps
config: ~
phases:
  - name: first
    skip_when: ~
    depends_on: []
    run_if: ~
    on_error: ~
    operations:
      - node:
          Container: mkv
        span:
          start: 38
          end: 51
          line: 2
          col: 23
    span:
      start: 24
      end: 53
      line: 2
      col: 9
  - name: second
    skip_when: ~
    depends_on:
      - first
    run_if:
      phase: first
      trigger: modified
    on_error: ~
    operations:
      - node:
          Container: mkv
        span:
          start: 155
          end: 168
          line: 6
          col: 13
    span:
      start: 62
      end: 178
      line: 3
      col: 9
span:
  start: 0
  end: 184
  line: 1
  col: 1
