crates/voom-dsl/tests/snapshots/parser_snapshots__snapshot_keep_remove_operations.snap
---
source: crates/voom-dsl/tests/parser_snapshots.rs
expression: ast
---
name: track-ops
config: ~
phases:
  - name: normalize
    skip_when: ~
    depends_on: []
    run_if: ~
    on_error: ~
    operations:
      - node:
          Keep:
            target: audio
            filter:
              LangIn:
                - eng
                - jpn
                - und
        span:
          start: 59
          end: 112
          line: 3
          col: 13
      - node:
          Keep:
            target: subtitles
            filter:
              And:
                - LangIn:
                    - eng
                - Not: Commentary
        span:
          start: 112
          end: 178
          line: 4
          col: 13
      - node:
          Remove:
            target: attachments
            filter:
              Not: Font
        span:
          start: 178
          end: 220
          line: 5
          col: 13
    span:
      start: 29
      end: 221
      line: 2
      col: 9
span:
  start: 0
  end: 227
  line: 1
  col: 1
