crates/voom-dsl/tests/snapshots/parser_snapshots__snapshot_metadata_phase.snap
---
source: crates/voom-dsl/tests/parser_snapshots.rs
expression: ast
---
name: metadata
extends: ~
metadata: ~
config: ~
phases:
  - name: metadata
    extend: false
    skip_when: ~
    depends_on: ~
    run_if: ~
    on_error: ~
    operations:
      - node:
          When:
            condition:
              FieldExists:
                - plugin
                - radarr
                - original_language
            then_actions:
              - SetLanguage:
                  - target: audio
                    filter: Default
                  - Field:
                      - plugin
                      - radarr
                      - original_language
              - SetTag:
                  - title
                  - Field:
                      - plugin
                      - radarr
                      - title
            else_actions: []
            span:
              start: 57
              end: 258
              line: 3
              col: 13
        span:
          start: 57
          end: 258
          line: 3
          col: 13
    span:
      start: 28
      end: 259
      line: 2
      col: 9
span:
  start: 0
  end: 265
  line: 1
  col: 1
