crates/voom-dsl/tests/snapshots/parser_snapshots__snapshot_minimal_policy.snap
---
source: crates/voom-dsl/tests/parser_snapshots.rs
expression: ast
---
name: minimal
config: ~
phases:
  - name: init
    skip_when: ~
    depends_on: []
    run_if: ~
    on_error: ~
    operations:
      - node:
          Container: mkv
        span:
          start: 52
          end: 65
          line: 3
          col: 13
    span:
      start: 27
      end: 75
      line: 2
      col: 9
span:
  start: 0
  end: 81
  line: 1
  col: 1
