crates/voom-dsl/tests/snapshots/parser_snapshots__snapshot_order_and_defaults.snap
---
source: crates/voom-dsl/tests/parser_snapshots.rs
assertion_line: 57
expression: ast
---
name: ordering
config: ~
phases:
  - name: normalize
    skip_when: ~
    depends_on: []
    run_if: ~
    on_error: ~
    operations:
      - Order:
          - video
          - audio_main
          - subtitle_main
          - attachment
      - Defaults:
          - - audio
            - first_per_language
          - - subtitle
            - none
    span:
      start: 28
      end: 237
      line: 2
      col: 9
span:
  start: 0
  end: 243
  line: 1
  col: 1
