crates/voom-dsl/tests/snapshots/parser_snapshots__snapshot_production_normalize.snap
---
source: crates/voom-dsl/tests/parser_snapshots.rs
expression: ast
---
name: production-normalize
extends: ~
metadata: ~
config:
  audio_languages:
    - eng
    - und
  subtitle_languages:
    - eng
    - und
  on_error: continue
  commentary_patterns:
    - commentary
    - director
    - cast
  keep_backups: ~
  span:
    start: 34
    end: 196
    line: 2
    col: 3
phases:
  - name: containerize
    extend: false
    skip_when: ~
    depends_on: ~
    run_if: ~
    on_error: ~
    operations:
      - node:
          Container: mkv
        span:
          start: 260
          end: 273
          line: 11
          col: 5
    span:
      start: 235
      end: 277
      line: 10
      col: 3
  - name: normalize
    extend: false
    skip_when: ~
    depends_on:
      - containerize
    run_if: ~
    on_error: ~
    operations:
      - node:
          Actions:
            target: audio
            settings:
              - - clear_all_default
                - Bool: true
              - - clear_all_forced
                - Bool: true
              - - clear_all_titles
                - Bool: true
        span:
          start: 366
          end: 475
          line: 18
          col: 5
      - node:
          Actions:
            target: subtitle
            settings:
              - - clear_all_default
                - Bool: true
              - - clear_all_forced
                - Bool: true
        span:
          start: 481
          end: 564
          line: 24
          col: 5
      - node:
          Keep:
            target: audio
            filter:
              LangIn:
                - eng
                - jpn
                - und
        span:
          start: 570
          end: 615
          line: 29
          col: 5
      - node:
          Keep:
            target: subtitles
            filter:
              And:
                - LangIn:
                    - eng
                - Not: Commentary
        span:
          start: 615
          end: 673
          line: 30
          col: 5
      - node:
          Remove:
            target: attachments
            filter:
              Not: Font
        span:
          start: 673
          end: 712
          line: 31
          col: 5
      - node:
          Order:
            - video
            - audio_main
            - audio_alternate
            - subtitle_main
            - subtitle_forced
            - audio_commentary
            - subtitle_commentary
            - attachment
        span:
          start: 712
          end: 868
          line: 33
          col: 5
      - node:
          Defaults:
            - - audio
              - first_per_language
            - - subtitle
              - none
        span:
          start: 874
          end: 943
          line: 39
          col: 5
    span:
      start: 312
      end: 947
      line: 15
      col: 3
  - name: transcode
    extend: false
    skip_when:
      FieldCompare:
        - - video
          - codec
        - In
        - List:
            - Ident: hevc
            - Ident: h265
    depends_on: ~
    run_if: ~
    on_error: ~
    operations:
      - node:
          Transcode:
            target: video
            codec: hevc
            settings:
              - - crf
                - Number:
                    - 20
                    - "20"
              - - preset
                - Ident: medium
              - - hw
                - Ident: auto
              - - hw_fallback
                - Bool: true
        span:
          start: 1050
          end: 1155
          line: 49
          col: 5
      - node:
          Transcode:
            target: audio
            codec: aac
            settings:
              - - preserve
                - List:
                    - Ident: truehd
                    - Ident: dts_hd
                    - Ident: flac
              - - bitrate
                - Number:
                    - 192
                    - 192k
        span:
          start: 1161
          end: 1250
          line: 56
          col: 5
    span:
      start: 985
      end: 1254
      line: 46
      col: 3
  - name: audio_compat
    extend: false
    skip_when: ~
    depends_on:
      - normalize
    run_if: ~
    on_error: ~
    operations:
      - node:
          Synthesize:
            name: Stereo AAC
            settings:
              - Codec: aac
              - Channels:
                  Ident: stereo
              - Source:
                  And:
                    - CodecIn:
                        - truehd
                        - dts_hd
                        - flac
                    - Channels:
                        - Ge
                        - 6
              - Bitrate: 192k
              - SkipIfExists:
                  And:
                    - CodecIn:
                        - aac
                    - Channels:
                        - Eq
                        - 2
                    - Not: Commentary
              - Title: Stereo (AAC)
              - Language: inherit
              - Position:
                  Ident: after_source
        span:
          start: 1353
          end: 1676
          line: 66
          col: 5
    span:
      start: 1299
      end: 1680
      line: 63
      col: 3
  - name: validate
    extend: false
    skip_when: ~
    depends_on:
      - transcode
      - audio_compat
    run_if:
      phase: transcode
      trigger: modified
    on_error: ~
    operations:
      - node:
          When:
            condition:
              And:
                - Exists:
                    target: audio
                    filter:
                      LangIn:
                        - jpn
                - Not:
                    Exists:
                      target: subtitle
                      filter:
                        LangIn:
                          - eng
            then_actions:
              - Warn: "Japanese audio but no English subtitles in {filename}"
            else_actions: []
            span:
              start: 1809
              end: 1969
              line: 83
              col: 5
        span:
          start: 1809
          end: 1969
          line: 83
          col: 5
      - node:
          Rules:
            mode: first
            rules:
              - name: multi-language
                when:
                  condition: AudioIsMultiLanguage
                  then_actions:
                    - Warn: "Multiple audio languages in {filename}"
                  else_actions: []
                  span:
                    start: 2021
                    end: 2124
                    line: 89
                    col: 9
        span:
          start: 1969
          end: 2131
          line: 87
          col: 5
    span:
      start: 1715
      end: 2135
      line: 79
      col: 3
  - name: metadata
    extend: false
    skip_when: ~
    depends_on: ~
    run_if: ~
    on_error: ~
    operations:
      - node:
          When:
            condition:
              FieldExists:
                - plugin
                - radarr
                - original_language
            then_actions:
              - SetLanguage:
                  - target: audio
                    filter: Default
                  - Field:
                      - plugin
                      - radarr
                      - original_language
              - SetTag:
                  - title
                  - Field:
                      - plugin
                      - radarr
                      - title
            else_actions: []
            span:
              start: 2190
              end: 2357
              line: 98
              col: 5
        span:
          start: 2190
          end: 2357
          line: 98
          col: 5
    span:
      start: 2169
      end: 2358
      line: 97
      col: 3
span:
  start: 0
  end: 2361
  line: 1
  col: 1
