crates/voom-dsl/tests/snapshots/parser_snapshots__snapshot_rules_block.snap
---
source: crates/voom-dsl/tests/parser_snapshots.rs
expression: ast
---
name: rules
extends: ~
metadata: ~
config: ~
phases:
  - name: validate
    extend: false
    skip_when: ~
    depends_on: []
    run_if: ~
    on_error: ~
    operations:
      - node:
          Rules:
            mode: first
            rules:
              - name: multi-language
                when:
                  condition: AudioIsMultiLanguage
                  then_actions:
                    - Warn: Multiple audio languages
                  else_actions: []
                  span:
                    start: 128
                    end: 253
                    line: 5
                    col: 21
        span:
          start: 54
          end: 268
          line: 3
          col: 13
    span:
      start: 25
      end: 278
      line: 2
      col: 9
span:
  start: 0
  end: 284
  line: 1
  col: 1
